<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label_vitroclean">Vitroclean</string>
    <string name="choose_manufacturer">Choose manufacturer</string>
    <string name="choose_filter">Choose filter</string>
    <string name="spec_vitroclean_vfa_text">Vitroclean VFA</string>
    <string name="spec_sand_load_text">Sand Load</string>
    <string name="spec_pebble_text">Pebble</string>
    <string name="spec_total_vitroclean_text">Total Vitroclean</string>
    <string name="spec_fifty_bag_vitroclean_text">Vitroclean 50 Lbs.</string>
    <string name="spec_fifty_bag_pebble_text">50 Lbs. Pebble</string>
    <string name="calculate_by_filter">Calculate by filter</string>
    <string name="calculate_by_cubic_feet">Calculate by cubic feet</string>
    <string name="calculate_by_sand">Calculate by sand needed</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">"Contact Us "</string>
    <string name="title_navigate_out_of_app">Navigating out of app</string>
    <string name="explanation_navigate_out_of_app">You are about to leave the app to go to the TriVitro website. Do you want to proceed?</string>
    <string name="content_desc_cancel">Cancel</string>
    <string name="content_desc_accept">Accept</string>
    <string name="content_desc_vitroclean_logo">Vitroclean Logo</string>
    <string name="title_error">Whoops…</string>
    <string name="error_message">An error occurred. Error: %1$s</string>
    <string name="error_message_service_unavailable">Service currently unavailable. Please try again.</string>
    <string name="error_message_client_error">Could not process request, please try again.</string>
    <string name="error_message_server_error">Unexpected server error. Please give us some time to resolve this.</string>
    <string name="error_message_unknown_error">An unknown error has occurred. Please try again.</string>

    <string name="content_desc_back_button">back</string>
    <string name="retry">Retry</string>
    <string name="dropdown_select_manufacturer">Select manufacturer</string>
    <string name="dropdown_select_model">Select model</string>
    <string name="prompt_start_calculating">Start calculating</string>
    <string name="subtext_cubic_feet">cubic feet</string>
    <string name="subtext_sand_needed">sand needed</string>
    <string name="recommended_sand_load_lbs">Recommended Sand Load Lbs.</string>
    <string name="recommended_vitroclean_vfa_load_lbs">Recommended Vitroclean (VF) Load Lbs.</string>
    <string name="recommended_vitroclean_pebble_vf8_load_lbs">Recommended Vitroclean Pebble (VFP) Load Lbs.</string>
    <string name="recommended_50_lb_bags_of_vitroclean_vfa">50 lb. Bags of Vitroclean VF</string>
    <string name="recommended_50_lb_bags_of_pebble_vf8">50 lb. Bags of Pebble (VFP).</string>
    <string name="prompt_select_manufacturer_first">Select manufacturer first.</string>
    <string name="email_subject">Subject</string>
    <string name="email_content">Message</string>
    <string name="action_send">Send</string>
    <string name="prompt_link_to_site">Vitroclean Specifications and Installation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="onboarding_button_prompt">Get Started</string>
    <string name="onboarding_message">Here for all your pool filter needs, Vitroclean strives to make your job easier. Calculate how much Vitroclean to use by your pool filter model, cubic feet or sand needed.</string>
    <string name="onboarding_title">Welcome to Vitroclean</string>
    <string name="error_check_email">Please check your email</string>
    <string name="error_data_missing">Fill out all of the fields</string>
    <string name="error_max_length_reached">Reached maximum length.</string>
    <string name="error_no_email_app">Couldn\'t find email app. Please go to website to contact us.</string>
    <string name="error_unexpected_error">An unexpected error occurred, try again later.</string>
    <string name="prompt_find_filter">Find your filter</string>
</resources>