...
                .fillMaxWidth()
                .padding(vertical = 12.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            //Display to input the numbers
            TextField(
                modifier = Modifier.fillMaxWidth().focusRequester(focusRequester).testTag("number display"),
                value = text,
                onValueChange = { newText -> onClick(CalculateUiEvent.OnNumberChange(newText)) },
                textStyle = MaterialTheme.typography.h1.copy(
                    fontSize = 30.sp,
                    fontWeight = FontWeight.Bold,
                    color = MaterialTheme.colors.onSurface,
...
