...
    }
}

@Composable
fun StatDisplayColumn(selectedFilter: PoolFilter) {
    LazyColumn(
        modifier = Modifier.fillMaxWidth(1f).testTag("stat display"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(25.dp)
    ) {
        if (selectedFilter.model != "" && selectedFilter.manufacturer != "") {
            item {
                Spacer(Modifier.height(18.dp))
...
